--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="adSense.js"></script>
+    
    <title>Gun Mayhem Redux Unblocked - Unblocked Games 66</title>
     <meta charset="UTF-8">
     <style>
